--- a/examples/01_skfp_introduction.ipynb
+++ b/examples/01_skfp_introduction.ipynb
@@ -49,10 +49,10 @@
     "\n",
     "We compute the popular [Extended Connectivity Fingerprint (ECFP)](https://docs.chemaxon.com/display/docs/fingerprints_extended-connectivity-fingerprint-ecfp.md), also known as Morgan fingerprint. By default, it uses radius 2 (diameter 4, we call this ECFP4 fingerprints) and 2048 bits (dimensions). Then, we train Random Forest classifier on those features, and evaluate it using AUROC (Area Under Receiver Operating Characteristic curve).\n",
     "\n",
-    "All those elements are described in [scikit-fingerprints documentation](https://scikit-fingerprints.github.io/scikit-fingerprints/index.html):\n",
-    "- [BACE dataset](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/datasets/generated/skfp.datasets.moleculenet.load_bace.html)\n",
-    "- [scaffold split](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.model_selection.scaffold_train_test_split.html)\n",
-    "- [ECFP fingerprint](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.fingerprints.ECFPFingerprint.html)"
+    "All those elements are described in [scikit-fingerprints documentation](https://scikit-fingerprints.readthedocs.io/latest/index.html):\n",
+    "- [BACE dataset](https://scikit-fingerprints.readthedocs.io/latest/modules/datasets/generated/skfp.datasets.moleculenet.load_bace.html)\n",
+    "- [scaffold split](https://scikit-fingerprints.readthedocs.io/latest/modules/generated/skfp.model_selection.scaffold_train_test_split.html)\n",
+    "- [ECFP fingerprint](https://scikit-fingerprints.readthedocs.io/latest/modules/generated/skfp.fingerprints.ECFPFingerprint.html)"
    ]
   },
   {
