--- a/examples/03_pipelines.ipynb
+++ b/examples/03_pipelines.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "We can easily chain all relevant operations in a single pipeline.\n",
     "\n",
-    "Also, note that for convenience `scaffold_train_test_split` and all fingerprints, e.g. `ECFPFingerprint` ([docs](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.fingerprints.ECFPFingerprint.html#skfp.fingerprints.ECFPFingerprint)) used below, can also take SMILES input. Those strings will be converted to molecules inside as necessary, since this is a very cheap operation. Whole pipeline then also takes lists of SMILES as inputs, instead of NumPy arrays, e.g. `smiles_train` instead of `X_train`."
+    "Also, note that for convenience `scaffold_train_test_split` and all fingerprints, e.g. `ECFPFingerprint` ([docs](https://scikit-fingerprints.readthedocs.io/latest/modules/generated/skfp.fingerprints.ECFPFingerprint.html#skfp.fingerprints.ECFPFingerprint)) used below, can also take SMILES input. Those strings will be converted to molecules inside as necessary, since this is a very cheap operation. Whole pipeline then also takes lists of SMILES as inputs, instead of NumPy arrays, e.g. `smiles_train` instead of `X_train`."
    ]
   },
   {
@@ -91,7 +91,7 @@
    "source": [
     "### More complex molecular property prediction pipeline\n",
     "\n",
-    "We will reuse the pipeline from above, but also add a second [MACCS fingerprint](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.fingerprints.MACCSFingerprint.html#skfp.fingerprints.MACCSFingerprint) and concatenate it as additional features. Scikit-learn has a built-in `FeatureUnion` class for this, with `make_union` function for easy usage. As it often benefits from parallelism, we will add `n_jobs=-1` to it.\n",
+    "We will reuse the pipeline from above, but also add a second [MACCS fingerprint](https://scikit-fingerprints.readthedocs.io/latest/modules/generated/skfp.fingerprints.MACCSFingerprint.html#skfp.fingerprints.MACCSFingerprint) and concatenate it as additional features. Scikit-learn has a built-in `FeatureUnion` class for this, with `make_union` function for easy usage. As it often benefits from parallelism, we will add `n_jobs=-1` to it.\n",
     "\n",
     "Since we may have all-zero features, we will also filter them out as another step, using `VarianceThreshold` ([docs](https://scikit-learn.org/stable/modules/generated/sklearn.feature_selection.VarianceThreshold.html))."
    ]
@@ -146,7 +146,7 @@
     "\n",
     "Here, we will build a visualization pipeline that uses dimensionality reduction for 2D visualization.\n",
     "\n",
-    "[UMAP](https://umap-learn.readthedocs.io/en/latest/) is a particularly powerful, yet easy to use nonlinear dimensionality reduction. It requires using some distance metric, which is used for pairwise distance calculation. While scikit-fingerprints implements [distance and similarity measures](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/distances.html) commonly used in chemoinformatics, like [Tanimoto distance](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.distances.tanimoto_binary_distance.html), UMAP also supports it directly under the name `\"jaccard\"`. Lastly, we'll plot the training and testing data with Matplotlib.\n",
+    "[UMAP](https://umap-learn.readthedocs.io/en/latest/) is a particularly powerful, yet easy to use nonlinear dimensionality reduction. It requires using some distance metric, which is used for pairwise distance calculation. While scikit-fingerprints implements [distance and similarity measures](https://scikit-fingerprints.readthedocs.io/latest/modules/distances.html) commonly used in chemoinformatics, like [Tanimoto distance](https://scikit-fingerprints.readthedocs.io/latest/modules/generated/skfp.distances.tanimoto_binary_distance.html), UMAP also supports it directly under the name `\"jaccard\"`. Lastly, we'll plot the training and testing data with Matplotlib.\n",
     "\n",
     "Since neither UMAP, nor Matplotlib are required by `scikit-fingerprints`, we will install them separately."
    ]
@@ -236,7 +236,7 @@
    "source": [
     "### Pipelines with conformational fingerprints\n",
     "\n",
-    "Some fingerprints, like [RDF fingerprint](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.fingerprints.RDFFingerprint.html), are based on the 3D (spatial) structure of a molecule conformer. They can be easily generated in scikit-fingerprints with [ConformerGenerator](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.preprocessing.ConformerGenerator.html), which uses ETKDGv3 algorithm underneath. This information is saved as a molecule attribute, and such molecules can be vectorized with both conformational fingerprints and regular ones. Note that conformer generation is hard, and can sometimes fail. It is also quite computationally expensive, and using parallelization is very useful.\n",
+    "Some fingerprints, like [RDF fingerprint](https://scikit-fingerprints.readthedocs.io/latest/modules/generated/skfp.fingerprints.RDFFingerprint.html), are based on the 3D (spatial) structure of a molecule conformer. They can be easily generated in scikit-fingerprints with [ConformerGenerator](https://scikit-fingerprints.readthedocs.io/latest/modules/generated/skfp.preprocessing.ConformerGenerator.html), which uses ETKDGv3 algorithm underneath. This information is saved as a molecule attribute, and such molecules can be vectorized with both conformational fingerprints and regular ones. Note that conformer generation is hard, and can sometimes fail. It is also quite computationally expensive, and using parallelization is very useful.\n",
     "\n",
     "We will use both conformational RDF fingerprint and topological (\"flat\") ECFP fingerprint here, concatenated to create a more rich feature space for classification. Since they create features with really different value ranges, we'll add min-max scaling. This is particularly important for linear classifiers and anything not based on decision trees. To make things more interesting, we will use logistic regression, the most popular linear model."
    ]
