--- a/examples/05_hyperparameter_tuning.ipynb
+++ b/examples/05_hyperparameter_tuning.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "Most common hyperparameter is `count`, wheter to use count variant instead of binary. Counting substructures is particularly beneficial for larger molecules, when we can expect multiple occurrences of e.g. functional groups. For many fingerprints, this is the only tunable setting.\n",
     "\n",
-    "Let's see the impact of using binary vs count variant on [beta-secretase 1 (BACE) dataset](https://doi.org/10.1021/acs.jcim.6b00290) from MoleculeNet benchmark, using [functional groups fingerprint](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.fingerprints.FunctionalGroupsFingerprint.html). It detects functional groups (fragments) [defined in RDKit](https://www.rdkit.org/docs/source/rdkit.Chem.Fragments.html)."
+    "Let's see the impact of using binary vs count variant on [beta-secretase 1 (BACE) dataset](https://doi.org/10.1021/acs.jcim.6b00290) from MoleculeNet benchmark, using [functional groups fingerprint](https://scikit-fingerprints.readthedocs.io/latest/modules/generated/skfp.fingerprints.FunctionalGroupsFingerprint.html). It detects functional groups (fragments) [defined in RDKit](https://www.rdkit.org/docs/source/rdkit.Chem.Fragments.html)."
    ]
   },
   {
@@ -98,7 +98,7 @@
     "\n",
     "Scikit-fingerprints estimators are fully compatible with scikit-learn tuning interface. We can plug them directly into e.g. [GridSearchCV](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html), which will check all combinations of hyperparameters. They can be defined for fingerprint, estimator, or both. Let's see examples of all 3 situations.\n",
     "\n",
-    "We will use [ECFP fingerprint](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.fingerprints.ECFPFingerprint.html), which has a lot of hyperparameters. This is typical for hashed fingerprints, e.g. Atom Pair, Topological Torsion, RDKit. For ECFP, two main hyperparameters are:\n",
+    "We will use [ECFP fingerprint](https://scikit-fingerprints.readthedocs.io/latest/modules/generated/skfp.fingerprints.ECFPFingerprint.html), which has a lot of hyperparameters. This is typical for hashed fingerprints, e.g. Atom Pair, Topological Torsion, RDKit. For ECFP, two main hyperparameters are:\n",
     "- `fp_size`, number of features, typically a multiple of 512, e.g. 1024, 2048, 4096\n",
     "- `radius`, what subgraphs size should be used, e.g. ECFP4 uses radius 2 (diameter 4), ECFP6 uses radius 3 (diameter 6), and so forth\n",
     "\n",
@@ -183,9 +183,9 @@
     "- for each tune Random Forest\n",
     "- pick the best combination of both\n",
     "\n",
-    "This will also check all 40 combinations, but fingerprint is calculated only 4 times. This results in huge efficiency gains for more costly fingerprints, e.g. [RDKit fingerprint](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.fingerprints.RDKitFingerprint.html), which extracts all subgraphs up to `max_path` bonds.\n",
+    "This will also check all 40 combinations, but fingerprint is calculated only 4 times. This results in huge efficiency gains for more costly fingerprints, e.g. [RDKit fingerprint](https://scikit-fingerprints.readthedocs.io/latest/modules/generated/skfp.fingerprints.RDKitFingerprint.html), which extracts all subgraphs up to `max_path` bonds.\n",
     "\n",
-    "scikit-fingerprints implements this optimized scheme in [FingerprintEstimatorGridSearch](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.model_selection.FingerprintEstimatorGridSearch.html) and [FingerprintEstimatorRandomizedSearch](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.model_selection.FingerprintEstimatorRandomizedSearch.html) classes. They are much more efficient when you need to tune hyperparameters of both fingerprint and estimator. Their parameters are:\n",
+    "scikit-fingerprints implements this optimized scheme in [FingerprintEstimatorGridSearch](https://scikit-fingerprints.readthedocs.io/latest/modules/generated/skfp.model_selection.FingerprintEstimatorGridSearch.html) and [FingerprintEstimatorRandomizedSearch](https://scikit-fingerprints.readthedocs.io/latest/modules/generated/skfp.model_selection.FingerprintEstimatorRandomizedSearch.html) classes. They are much more efficient when you need to tune hyperparameters of both fingerprint and estimator. Their parameters are:\n",
     "- fingerprint object\n",
     "- parameters grid for fingerprint\n",
     "- tuning object for estimator, e.g. `GridSearchCV`\n",
