--- a/examples/07_datasets_and_benchmarking.ipynb
+++ b/examples/07_datasets_and_benchmarking.ipynb
@@ -378,7 +378,7 @@
    "source": [
     "### Multioutput metrics\n",
     "\n",
-    "scikit-fingerprints implements [many quality metrics functions](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/metrics.html). They are made to be very versatile and robust, and work for single-task datasets, multioutput ones, and also when some labels are missing. For multitask datasets, basic metric is calculated separately for each task and averaged.\n",
+    "scikit-fingerprints implements [many quality metrics functions](https://scikit-fingerprints.readthedocs.io/latest/modules/metrics.html). They are made to be very versatile and robust, and work for single-task datasets, multioutput ones, and also when some labels are missing. For multitask datasets, basic metric is calculated separately for each task and averaged.\n",
     "\n",
     "Probabilistic metrics like AUROC (Area Under Receiver Operating characteristic Curve) or AUPRC (Area Under Precision-Recall Curve) require predicted positive class probabilities as an input. Scikit-learn returns quite weird outputs in `.predict_proba()` for multioutput cases.  scikit-fingerprints implements `extract_pos_proba()` function to easily transform those outputs to probabilities with right shape.\n",
     "\n",
