--- a/examples/09_molecular_filters.ipynb
+++ b/examples/09_molecular_filters.ipynb
@@ -39,10 +39,10 @@
    "source": [
     "Let's see a few examples of physicochemical filters:\n",
     "\n",
-    "1. **Molecular weight** ([docs](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.filters.MolecularWeightFilter.html#skfp.filters.MolecularWeightFilter)):\n",
+    "1. **Molecular weight** ([docs](https://scikit-fingerprints.readthedocs.io/latest/modules/generated/skfp.filters.MolecularWeightFilter.html#skfp.filters.MolecularWeightFilter)):\n",
     "   - simply checks if a total molecular mass is inside a given range\n",
     "   - by default, the range is $[0, 1000]$, corresponding roughly to most small molecules\n",
-    "2. **Lipinski Rule of 5** ([docs](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.filters.LipinskiFilter.html#skfp.filters.LipinskiFilter)):\n",
+    "2. **Lipinski Rule of 5** ([docs](https://scikit-fingerprints.readthedocs.io/latest/modules/generated/skfp.filters.LipinskiFilter.html#skfp.filters.LipinskiFilter)):\n",
     "   - one of the most famous molecular filters, checking for oral bioavailability\n",
     "   - tries to select molecules that are small and lipophilic\n",
     "   - by default, allows breaking one rule\n",
@@ -50,7 +50,7 @@
     "   - number of hydrogen bond acceptors (HBA) $\\leq 10$\n",
     "   - number of hydrogen bond donors (HBD) $\\leq 5$\n",
     "   - logP $\\leq 5$\n",
-    "3. **Beyond Rule of 5** ([docs](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.filters.BeyondRo5Filter.html#skfp.filters.BeyondRo5Filter)):\n",
+    "3. **Beyond Rule of 5** ([docs](https://scikit-fingerprints.readthedocs.io/latest/modules/generated/skfp.filters.BeyondRo5Filter.html#skfp.filters.BeyondRo5Filter)):\n",
     "   - designed to cover novel orally bioavailable drugs\n",
     "   - less strict than Lipinski filter\n",
     "   - molecular weight $\\leq 1000$\n",
@@ -59,7 +59,7 @@
     "   - HBD $\\leq 6$\n",
     "   - topological polar surface area (TPSA) $\\leq 250$\n",
     "   - number of rotatable bonds $\\leq 20$\n",
-    "4. **Rule of 3** ([docs](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.filters.RuleOfThreeFilter.html#skfp.filters.RuleOfThreeFilter)):\n",
+    "4. **Rule of 3** ([docs](https://scikit-fingerprints.readthedocs.io/latest/modules/generated/skfp.filters.RuleOfThreeFilter.html#skfp.filters.RuleOfThreeFilter)):\n",
     "   - optimised to search for fragment-based lead-like compounds with desired properties\n",
     "   - there is also an extended rule, including TPSA and rotatable bonds conditions\n",
     "   - molecular weight $\\leq 300$\n",
@@ -405,9 +405,7 @@
    "cell_type": "markdown",
    "id": "a581bb4f-ba1e-4d96-afcc-c219afd442ac",
    "metadata": {},
-   "source": [
-    "Substructural filters use sets of SMARTS patterns to define unwanted substructures. An example is Brenk filter ([docs](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.filters.BrenkFilter.html)), designed to filter out molecules containing substructures with undesirable pharmacokinetics or toxicity, e.g. sulfates, phosphates, nitro groups. Other filters from this group often work based on similar principles, but differing in how aggressively they filter the molecules."
-   ]
+   "source": "Substructural filters use sets of SMARTS patterns to define unwanted substructures. An example is Brenk filter ([docs](https://scikit-fingerprints.readthedocs.io/latest/modules/generated/skfp.filters.BrenkFilter.html)), designed to filter out molecules containing substructures with undesirable pharmacokinetics or toxicity, e.g. sulfates, phosphates, nitro groups. Other filters from this group often work based on similar principles, but differing in how aggressively they filter the molecules."
   },
   {
    "cell_type": "code",
